coverage_output.txt
info: cargo-llvm-cov currently setting cfg(coverage); you can opt-out it by passing --no-cfg-coverage
   Compiling nestgate-core v0.1.0 (/home/eastgate/Development/ecoPrimals/nestgate/code/crates/nestgate-core)
   Compiling nestgate-mcp v0.1.0 (/home/eastgate/Development/ecoPrimals/nestgate/code/crates/nestgate-mcp)
   Compiling nestgate-automation v0.1.0 (/home/eastgate/Development/ecoPrimals/nestgate/code/crates/nestgate-automation)
   Compiling nestgate-network v0.1.0 (/home/eastgate/Development/ecoPrimals/nestgate/code/crates/nestgate-network)
   Compiling nestgate-canonical v0.1.0 (/home/eastgate/Development/ecoPrimals/nestgate/code/crates/nestgate-canonical)
   Compiling nestgate-performance v0.1.0 (/home/eastgate/Development/ecoPrimals/nestgate/code/crates/nestgate-performance)
   Compiling nestgate v0.1.0 (/home/eastgate/Development/ecoPrimals/nestgate)
   Compiling nestgate-zfs v0.1.0 (/home/eastgate/Development/ecoPrimals/nestgate/code/crates/nestgate-zfs)
   Compiling nestgate-nas v0.9.2 (/home/eastgate/Development/ecoPrimals/nestgate/code/crates/nestgate-nas)
error[E0432]: unresolved import `nestgate_core::capability`
 --> examples/hardcoding_migration_example.rs:6:20
  |
6 | use nestgate_core::capability::PrimalCapability;
  |                    ^^^^^^^^^^ could not find `capability` in `nestgate_core`

For more information about this error, try `rustc --explain E0432`.
error: could not compile `nestgate` (example "hardcoding_migration_example" test) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: process didn't exit successfully: `/home/eastgate/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo test --manifest-path /home/eastgate/Development/ecoPrimals/nestgate/Cargo.toml --target-dir /home/eastgate/Development/ecoPrimals/nestgate/target/llvm-cov-target --all-targets` (exit status: 101)
